[package]
name = "duk"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
duktape = { path = "../duktape", features = ["commonjs"] }
duktape_es2015 = { path = "../duktape_es2015" }
log = "^0.4"
env_logger = "^0.5.13"
rustyline = "^2.1.0"
colored = "1.6"
clap = "2.32.0"