[package]
name = "duktape"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[features]
default = [] # duk_push_null(self.ctx);


[dependencies]
duktape-sys = { path = "../duktape-sys" }
error-chain = "0.12.0"
typemap = "0.3.3"
serde = { version = "1.0", optional = true }