[package]
name = "duktape"
version = "0.2.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
duktape_sys = { path = "../duktape_sys" }
error-chain = "^0.12"
typemap = "^0.3"
bitflags = "^1.0.4"
value = { git = "https://github.com/kildevaeld/value-rs", optional = true, features = ["datetime"] }

[[example]]
name = "class"
path = "example/class.rs"

[[example]]
name = "bytes"
path = "example/bytes.rs"


[features]
default = []
value-rs = ["value"]
