[package]
name = "duktape_stdlib"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
duktape = { path = "../duktape" }
duktape_modules = { path = "../duktape_modules" }
bitflags = "^1.0.4"
reqwest = { version = "^0.9", optional = true }

[features]
default = []
http = ["reqwest"]